name:                     vulkan
version:                  0.0.0.1
synopsis:                 (WIP)
description:              Please see README.md
homepage:                 https://github.com/oldmanmike/vulkan
bug-reports:              https://github.com/oldmanmike/vulkan/issues
license:                  BSD3
license-file:             LICENSE
author:                   Michael Carpenter
maintainer:               Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:                Copyright (C) 2016 Michael Carpenter
category:                 Graphics
build-type:               Simple
extra-source-files:       README.md, LICENSE, vk.xml, vkspec.pdf
cabal-version:            >=1.10

library
    hs-source-dirs:       src
    ghc-options:          -Wall
    exposed-modules:      Vulkan
                          Vulkan.Enum
    build-depends:        base >= 4.7 && < 5
    default-language:     Haskell2010

executable generator
    hs-source-dirs:       gen
    main-is:              Generator.hs
    ghc-options:          -Wall
    other-modules:        EnumGen
                          Parser
                          Types
    build-depends:        base,
                          hxt,
                          split
    default-language:     Haskell2010

test-suite vulkan-test
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test
    main-is:              Spec.hs
    build-depends:        base,
                          vulkan
    ghc-options:          -threaded -rtsopts -with-rtsopts=-N
    default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/vulkan
